# pypower

./: .gitignore  README.md  pyproject.toml  setup.py
doc/: conf.py  index.rst
doc/api/: api.rst
doc/developer/: changes.rst  contributing.rst  documentation.rst  tests.rst
doc/user/: building.rst
nb/: README.md  basic_examples.ipynb  pip_examples.ipynb  window_examples.ipynb
pypower/: __init__.py  approx_window.py  convolved_fkp_power.py  convolved_mesh_power.py  direct_corr.py  direct_power.py  fft_corr.py  fft_power.py  fft_residual.py  fft_window.py  fftlog.py  mesh.py  mpi.py  smooth_window.py  utils.py  wide_angle.py
pypower/scripts/: README.md  mock_interlacing_periodic.py  mock_window_fft.py  mock_window_fft_global_los.py  mock_window_fft_local_los.py  mock_window_periodic.py  mock_window_smooth.py  mock_window_smooth_global_los.py  mock_window_smooth_local_los.py
pypower/tests/: create_Wll.py  test_approx_window.py  test_direct_corr.py  test_direct_power.py  test_fft_corr.py  test_fft_power.py  test_fft_residual.py  test_fft_window.py  test_fftpower.py  test_smooth_window.py  test_wide_angle.py  test_window.py  wide_angle_tools.py
